<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.FAQFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Q.1 From how many restaurants can an order be placed?"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/poppins"
                android:textColor="@color/colorPrimaryDark"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_answer_one"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/poppins"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="10dp"
                android:textColor="@android:color/black"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Q.2 How much quantity of food can I order at once?"
                android:textColor="@color/colorPrimaryDark"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/poppins"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_answer_two"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/poppins"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="10dp"
                android:textColor="@android:color/black"/>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Q.3 I forgot my password, how can I log in?"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/poppins"
                android:textColor="@color/colorPrimaryDark"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_answer_three"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/poppins"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="10dp"
                android:textColor="@android:color/black"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Q.4 Where can I view my previous orders?"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="@font/poppins"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_answer_four"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/poppins"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="10dp"
                android:textColor="@android:color/black"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Q.5 How can I view the restaurants with highest ratings?"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/poppins"
                android:textColor="@color/colorPrimaryDark"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_answer_five"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/poppins"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="10dp"
                android:textColor="@android:color/black"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Q.6 How will I know that my order is placed?"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/poppins"
                android:textColor="@color/colorPrimaryDark"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_answer_six"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/poppins"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="10dp"
                android:textColor="@android:color/black"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray"/>
        </LinearLayout>

    </ScrollView>
</FrameLayout>